examples/test/testpolicy4317.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4317
  namespace: namespace163
spec:
  podSelector:
    matchLabels:
      key38: value38
      key40: value43
      key14: value19
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key28: value43
          key2: value0
      podSelector:
        matchLabels:
          key46: value37
